@@ -1,3 +1,8 @@
+Sun Jan  7 20:51:27 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/globbing.c (parse_layout): Actually check upper-cased version
+	  of layout rather than creating it and then ignoring it.
+
 Sun Jan  7 20:48:58 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	Fix a slew of memory leaks, including a nasty per-search leak in
